@@ -1,4 +1,4 @@
-package org.powermock.core.classloader.annotations;
+package org.powermock.api.easymock.annotation;
 
 import java.lang.annotation.Documented;
 import java.lang.annotation.ElementType;
@@ -7,19 +7,23 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
+import org.powermock.core.classloader.annotations.PowerMockListener;
+
 /**
  * This annotation can be placed on those fields in your test class that should
- * be mocked. This eliminates the need to setup and tear-down mocks manually
- * which minimizes repetitive test code and makes the test more readable. In
- * order for PowerMock to control the life-cycle of the mocks you must supply
- * the {@link PowerMockListener} annotation to the class-level of the test case.
- * For example when using the EasyMock API:
+ * be mocked in a nice manner (i.e. by default allows all method calls and
+ * returns appropriate empty values (0, <code>null</code> or <code>false</code>
+ * )). This eliminates the need to setup and tear-down mocks manually which
+ * minimizes repetitive test code and makes the test more readable. In order for
+ * PowerMock to control the life-cycle of the mocks you must supply the
+ * {@link PowerMockListener} annotation to the class-level of the test case. For
+ * example when using the EasyMock API:
  * 
  * <pre>
  * &#064;PowerMockListener(EasyMockAnnotationEnabler.class)
  * public class PersonServiceTest {
  * 
- * 	&#064;Mock
+ * 	&#064;MockNice
  * 	private PersonDao personDaoMock;
  * 
  * 	private PersonService classUnderTest;
@@ -43,7 +47,7 @@ import java.lang.annotation.Target;
  * &#064;PowerMockListener(EasyMockAnnotationEnabler.class)
  * public class PersonServiceTest {
  * 
- * 	&#064;Mock({&quot;getPerson&quot;, &quot;savePerson&quot;})
+ * 	&#064;MockNice({&quot;getPerson&quot;, &quot;savePerson&quot;})
  * 	private PersonDao personDaoMock;
  * 
  * 	private PersonService classUnderTest;
@@ -57,13 +61,12 @@ import java.lang.annotation.Target;
  * </pre>
  * <p>
  * 
- * 
  */
 
 @Target( { ElementType.FIELD })
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
 @Inherited
-public @interface Mock {
+public @interface MockNice {
 	String[] value() default "";
 }
