@@ -20,6 +20,7 @@ Change log 1.1 (under development)
 * The @PrepareForTest annotation now accepts interfaces as types. This is useful in situations where you wan't to make sure that a certain interface is loaded by the same classloader as the reset of the mocks.
 * Updated the tutorial projects to reflect the latest changes in PowerMock.
 * Errors are propagated correctly when invoking the PowerMock.replay(..) method (i.e. they are no longer wrapped in run-time exceptions).
+* Added a MockNice and MockStrict annotation which can be placed on fields to allow for the AnnotationEnabler of the EasyMock api to create and inject mock objects.
 
 Change log 1.0 (released 2008-11-18)
 ------------------------------------
